--- a/blog.html
+++ b/blog.html
@@ -107,14 +107,14 @@
         <div class="container">
             <div class="row">
                 <div class="col col-12 col-lg-2"></div>
-                <div class="col col-12 col-lg-8">
+                <div class="col col-12 col-lg-8" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                     <div class="head">
                         <h2>
                             ZoneTAPE Soft Silikon Bant
                             <span>İz ve Skar Tedavisinde Etkili Çözüm</span>
                         </h2>
                     </div>
-                    <div class="text-article">
+                    <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                         <article>
                             <p><span>Cerrahi operasyonlar, estetik işlemler veya cilt yaralanmaları sonrası en sık karşılaşılan sorunlardan biri skar ve keloid izleridir. Bu izler, hem estetik açıdan rahatsızlık verebilir hem de cildin doğal görünümünü bozabilir. ZoneTAPE Soft Silikon Bant, bu tür izlerin yönetiminde etkili ve güvenilir bir çözüm sunar.</span></p>
                             <p>ZoneTAPE, tıbbi kullanım için özel olarak geliştirilen yumuşak silikon banttır. Kimyasal yapıştırıcı içermez ve tamamen cilt dostudur. Yüksek ve düşük sıcaklıklarda dayanıklılığını korurken, UV ışınlarına, ozona ve dış etkenlere karşı da dirençlidir. Bu özellikleri sayesinde uzun süreli kullanımda bile güvenli ve konforlu bir deneyim sunar. Skar ve keloid oluşumunu önlemeye yardımcı olarak izleri azaltır, nem dengesini koruyarak cildin iyileşme sürecini destekler. Ayrıca iz dokusunu yumuşatarak kızarıklık ve sertliği azaltır, ciltteki gerginlik hissini hafifletir. Kimyasal yapıştırıcı içermediği için hassas ciltlerde alerji riskini en aza indirir.</p>
@@ -127,7 +127,7 @@
             </div>
         </div>
     </div><!-- blog-banner -->
-    <div class="blog-banner-img">
+    <div class="blog-banner-img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
         <img src="assets/images/blog-big-img.png" alt="" />
     </div><!-- blog-banner-img -->
     <div class="blog-list">
@@ -135,7 +135,7 @@
             <div class="row">
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-10">
-                    <div class="head">
+                    <div class="head" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <h2>
                             DİĞER BLOG PAYLAŞIMLARIMIZ
                             <span>ZONETAPE İLE İZLERİN GÖRÜNÜRLÜĞÜNÜ AZALTIN</span>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-1"></div>
-                <div class="col col-12 col-lg-5">
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                     <a class="item" href="javascript:;">
                         <div class="img"><img src="assets/images/blog-tiny-1.png" alt="" /></div>
                         <div class="text">
@@ -157,7 +157,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col col-12 col-lg-5">
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                     <a class="item" href="javascript:;">
                         <div class="img"><img src="assets/images/blog-tiny-2.png" alt="" /></div>
                         <div class="text">
@@ -172,7 +172,7 @@
                 </div>
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-1"></div>
-                <div class="col col-12 col-lg-5">
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                     <a class="item" href="javascript:;">
                         <div class="img"><img src="assets/images/blog-tiny-3.png" alt="" /></div>
                         <div class="text">
@@ -185,7 +185,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col col-12 col-lg-5">
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                     <a class="item" href="javascript:;">
                         <div class="img"><img src="assets/images/blog-tiny-4.png" alt="" /></div>
                         <div class="text">
@@ -200,7 +200,7 @@
                 </div>
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-1"></div>
-                <div class="col col-12 col-lg-5">
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                     <a class="item" href="javascript:;">
                         <div class="img"><img src="assets/images/blog-tiny-5.png" alt="" /></div>
                         <div class="text">
@@ -213,7 +213,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col col-12 col-lg-5">
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                     <a class="item" href="javascript:;">
                         <div class="img"><img src="assets/images/blog-tiny-6.png" alt="" /></div>
                         <div class="text">
@@ -264,116 +264,9 @@
             </div>
         </div>
     </div><!-- footer -->
-    <!-- Modal -->
-    <div class="modal fade" id="kvkkModal" tabindex="-1" aria-labelledby="kvkkModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="kvkkModalLabel">KVKK ve Gizlilik Sözleşmesi</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
-                </div>
-            </div>
-        </div>
-    </div><!-- kvkkModal -->
     <script src="assets/plugins/jquery-3.7.1.min.js"></script>
     <script src="assets/plugins/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
-    <script src="assets/plugins/swiper/swiper-bundle.min.js"></script>
     <script src="assets/plugins/aos/aos.js"></script>
-    <script src="assets/plugins/fancybox/fancybox.umd.js"></script>
     <script src="assets/js/global.js"></script>
-    <script>
-        AOS.init({
-            once: true,  // Animasyonlar sadece bir kez tetiklenecek
-            mobile: false, // Mobil cihazlarda AOS'u devre dışı bırakır
-        });
-        
-        var mainSlider = new Swiper(".main-slider .main-swiper", {
-            effect: 'fade',
-            parallax: true,
-            autoplay: {
-                delay: 4000,
-                disableOnInteraction: true,
-            },
-            navigation: {
-                nextEl: ".main-slider .swiper-button-next",
-                prevEl: ".main-slider .swiper-button-prev",
-            },
-        });
-        
-        var operations = new Swiper(".operations .operations-swiper", {
-            slidesPerView: 3,
-            spaceBetween: 20,
-            autoplay: {
-                delay: 4000,
-                disableOnInteraction: true,
-            },
-            navigation: {
-                nextEl: ".operations .swiper-button-next",
-                prevEl: ".operations .swiper-button-prev",
-            },
-            breakpoints: {
-                0: {
-                    slidesPerView: 1,
-                },
-                640: {
-                    slidesPerView: 2,
-                },
-                991: {
-                    slidesPerView: 3,
-                },
-            },
-        });
-        var mainTestimonials = new Swiper(".testimonials .testimonials-swiper", {
-            slidesPerView: 1,
-            autoplay: {
-                delay: 4000,
-                disableOnInteraction: true,
-            },
-            navigation: {
-                nextEl: ".testimonials .swiper-button-next",
-                prevEl: ".testimonials .swiper-button-prev",
-            },
-        });
-        var mainLogos = new Swiper(".logos-slider .logos-swiper", {
-            slidesPerView: 5,
-            autoplay: {
-                delay: 4000,
-                disableOnInteraction: true,
-            },
-            breakpoints: {
-                0: {
-                    slidesPerView: 1,
-                },
-                640: {
-                    slidesPerView: 2,
-                },
-                991: {
-                    slidesPerView: 3,
-                },
-                1200: {
-                    slidesPerView: 4,
-                },
-                1500: {
-                    slidesPerView: 5,
-                },
-            },
-        });
-
-    </script>
 </body>
 </html>
