--- a/products.html
+++ b/products.html
@@ -155,7 +155,7 @@
                 <div class="row">
                     <div class="col col-12 col-lg-1"></div>
                     <div class="col col-12 col-lg-10">
-                        <div class="head t-center">
+                        <div class="head t-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                             <h2>
                                 ZONETAPE SİLİKON BANT
                                 <span>Tüm Cerrahi Operasyonlarda Kullanılmaktadır</span>
@@ -163,14 +163,14 @@
                         </div>
                     </div>
                     <div class="col col-12 col-lg-1"></div>
-                    <div class="col col-12 col-lg-6">
+                    <div class="col col-12 col-lg-6" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <div class="text-article">
                             <article>
                                 <p><span>ZoneTAPE Silikon Bant, cerrahi operasyonlar, yaralanmalar, yanıklar veya doğum sonrası süreçlerde oluşan izlerin görünümünü azaltmaya yardımcı olan tıbbi bir üründür. Özel silikon yapısı sayesinde cilde zarar vermeden uygulanır ve hiçbir kimyasal yapıştırıcı içermez. Bu özelliğiyle hem güvenli hem de cilt dostudur.</span></p>
                            </article>
                         </div>
                     </div>
-                    <div class="col col-12 col-lg-6">
+                    <div class="col col-12 col-lg-6" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                         <div class="text-article">
                             <article>
                                 <p>Dayanıklı yapısı sayesinde yüksek ve düşük sıcaklıklarda özelliğini kaybetmez, UV ışınlarına, ozona ve çevresel etkenlere karşı direnç gösterir. Uzun süreli kullanımda bile konforlu bir deneyim sunar. ZoneTAPE, izlerin görünümünü azaltmaya, cilt dokusunu yumuşatmaya ve nem dengesini koruyarak iyileşme sürecini desteklemeye yardımcı olur. Ayrıca kızarıklık, sertlik ve gerginlik hissini hafifletir, düzenli kullanımda skar ve keloid oluşumunu önlemeye katkı sağlar.</p>
@@ -187,20 +187,20 @@
             <div class="row">
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-10">
-                    <div class="img">
+                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="assets/images/pro-detail-img-1.png" alt="" />
                     </div>
                     <div class="row">
                         <div class="col col-12 col-lg-1"></div>
                         <div class="col col-12 col-lg-10">
-                            <div class="text">
-                                <div class="head">
+                            <div class="text" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                                <div class="head" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                                     <h2>
                                         TÜM ESTETİK
                                         <span>OPERASYONLAR</span>
                                     </h2>
                                 </div>
-                                <div class="text-article">
+                                <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                                     <article>
                                         <p><span>ZoneTAPE silikon bant; burun, meme, karin, bacak bölgelerindeki estetik ameliyatları operasyonları sonrasında kullanılır.</span></p>
                                         <p>Ayrıca mide sonrası oluşan kilo kayıplarından kaynaklı karin germe operasyonları sonrasında, tüm cilt ile ilgili cerrahi operasyonlar sonrası deride oluşacak izlerin giderilmesinde önemli bir seçenektir.</p>
@@ -216,20 +216,20 @@
             <div class="row">
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-10">
-                    <div class="img">
+                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="assets/images/pro-detail-img-2.png" alt="" />
                     </div>
                     <div class="row">
                         <div class="col col-12 col-lg-1"></div>
                         <div class="col col-12 col-lg-10">
-                            <div class="text">
-                                <div class="head">
+                            <div class="text" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                                <div class="head" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                                     <h2>
                                         SKAR KELOID
                                         <span>İZLERİ</span>
                                     </h2>
                                 </div>
-                                <div class="text-article">
+                                <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                                     <article>
                                         <p><span>Skar ve keloid izleri, ciltte yaralanma veya cerrahi sonrası oluşan kalın, kabarık ve bazen rahatsızlık veren yara izleridir. Keloidler normal skarlardan farklı olarak sınırlarını aşabilir ve estetik açıdan sorun yaratabilir. Bu izlerin görünümünü azaltmak ve iyileşme sürecini desteklemek için silikon bantlar etkili bir çözümdür.</span></p>
                                         <p>ZoneTAPE Soft Silikon Bant, ciltte nem bariyeri oluşturarak yara dokusunu yumuşatır, aşırı kollajen birikimini önleyerek skar ve keloid oluşumunu azaltır. Kızarıklık ve sertliği hafifletir, kimyasal yapıştırıcı içermediği için hassas ciltlerde güvenle kullanılabilir. Yara tamamen iyileştikten ve doktor onayı alındıktan sonra, temiz ve kuru cilde uygulanır. Günde 12-72 saat takılır ve genellikle en az 8 hafta düzenli kullanılır. Skar ve keloid izlerinin yönetiminde pratik, konforlu ve etkili bir çözümdür.</p>
@@ -278,116 +278,9 @@
             </div>
         </div>
     </div><!-- footer -->
-    <!-- Modal -->
-    <div class="modal fade" id="kvkkModal" tabindex="-1" aria-labelledby="kvkkModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="kvkkModalLabel">KVKK ve Gizlilik Sözleşmesi</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
-                </div>
-            </div>
-        </div>
-    </div><!-- kvkkModal -->
     <script src="assets/plugins/jquery-3.7.1.min.js"></script>
     <script src="assets/plugins/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
-    <script src="assets/plugins/swiper/swiper-bundle.min.js"></script>
     <script src="assets/plugins/aos/aos.js"></script>
-    <script src="assets/plugins/fancybox/fancybox.umd.js"></script>
     <script src="assets/js/global.js"></script>
-    <script>
-        AOS.init({
-            once: true,  // Animasyonlar sadece bir kez tetiklenecek
-            mobile: false, // Mobil cihazlarda AOS'u devre dışı bırakır
-        });
-        
-        var mainSlider = new Swiper(".main-slider .main-swiper", {
-            effect: 'fade',
-            parallax: true,
-            autoplay: {
-                delay: 4000,
-                disableOnInteraction: true,
-            },
-            navigation: {
-                nextEl: ".main-slider .swiper-button-next",
-                prevEl: ".main-slider .swiper-button-prev",
-            },
-        });
-        
-        var operations = new Swiper(".operations .operations-swiper", {
-            slidesPerView: 3,
-            spaceBetween: 20,
-            autoplay: {
-                delay: 4000,
-                disableOnInteraction: true,
-            },
-            navigation: {
-                nextEl: ".operations .swiper-button-next",
-                prevEl: ".operations .swiper-button-prev",
-            },
-            breakpoints: {
-                0: {
-                    slidesPerView: 1,
-                },
-                640: {
-                    slidesPerView: 2,
-                },
-                991: {
-                    slidesPerView: 3,
-                },
-            },
-        });
-        var mainTestimonials = new Swiper(".testimonials .testimonials-swiper", {
-            slidesPerView: 1,
-            autoplay: {
-                delay: 4000,
-                disableOnInteraction: true,
-            },
-            navigation: {
-                nextEl: ".testimonials .swiper-button-next",
-                prevEl: ".testimonials .swiper-button-prev",
-            },
-        });
-        var mainLogos = new Swiper(".logos-slider .logos-swiper", {
-            slidesPerView: 5,
-            autoplay: {
-                delay: 4000,
-                disableOnInteraction: true,
-            },
-            breakpoints: {
-                0: {
-                    slidesPerView: 1,
-                },
-                640: {
-                    slidesPerView: 2,
-                },
-                991: {
-                    slidesPerView: 3,
-                },
-                1200: {
-                    slidesPerView: 4,
-                },
-                1500: {
-                    slidesPerView: 5,
-                },
-            },
-        });
-
-    </script>
 </body>
 </html>
