--- a/medzone.html
+++ b/medzone.html
@@ -114,13 +114,13 @@
                 <div class="row">
                     <div class="col col-12 col-lg-1"></div>
                     <div class="col col-12 col-lg-10">
-                        <div class="head t-center">
+                        <div class="head t-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                             <h2>
                                 MEDZONE
                                 <span>SAĞLIK HİZMETLERİ</span>
                             </h2>
                         </div>
-                        <div class="text-article t-center">
+                        <div class="text-article t-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                             <article>
                                 <p><span>Medzone Sağlık Hizmetleri, dünya standartlarında sağlık hizmeti sunmayı ilke edinmiş, çağdaş yenilikleri yakından takip eden ve sektörde öncülük eden bir kurumdur. Vizyonumuz; hem yurt içinde hem de yurt dışında, tüm hastalarımıza en yüksek kalitede ürün ve hizmeti sunarak güven, kalite ve memnuniyetin adresi olmaktır. Hastalarımızın kendilerini daima güven içinde hissettikleri, beklentilerinin karşılandığı ve sağlıkta yüksek yaşam kalitesine ulaştıkları bir ortam yaratmayı hedefliyoruz. Aynı zamanda sağlık alanında geliştirdiğimiz yenilikçi çözümlerle yalnızca mevcut ihtiyaçları karşılamakla kalmayıp, geleceğin sağlık standartlarını da belirleyen örnek bir kurum olmayı amaçlıyoruz.</span></p>
                                 <p>Tıbbi etik kurallarına bağlı kalarak, verimli, etkin ve sürdürülebilir sağlık hizmetleri sunuyor, güvenilir ürün tedarik süreçleriyle toplumun sağlık ihtiyaçlarını karşılıyoruz.</p>
@@ -130,12 +130,12 @@
                         </div>
                     </div>
                     <div class="col col-12 col-lg-1"></div>
-                    <div class="col col-12 col-lg-12">
+                    <div class="col col-12 col-lg-12" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <div class="img">
                             <img src="assets/images/medzone-page-1-img.png" alt="" />
                         </div>
                     </div>
-                    <div class="col col-12 col-lg-5">
+                    <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <div class="head" style="margin-top:80px;">
                             <h2>
                                 MEDZONE
@@ -144,13 +144,13 @@
                         </div>
                     </div>
                     <div class="col col-12 col-lg-7"></div>
-                    <div class="col col-12 col-lg-5">
+                    <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                         <div class="text-article">
                             <p><span>Tıbbi etik kurallarına bağlı kalarak, verimli, etkin ve sürdürülebilir sağlık hizmetleri sunmak; güvenilir ürün tedarik süreçleriyle toplumun sağlık ihtiyaçlarını karşılamak ve yaşam kalitesini artırmak.</span></p>
                         </div>
                     </div>
                     <div class="col col-12 col-lg-1"></div>
-                    <div class="col col-12 col-lg-6">
+                    <div class="col col-12 col-lg-6" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                         <div class="text-article">
                             <p>Medzone Sağlık Hizmetleri olarak temel amacımız, insanların yaşam kalitesini yükseltmek ve sağlık ihtiyaçlarına en doğru çözümleri sunmaktır. Bu doğrultuda yenilikçi yaklaşımlar geliştirmeyi, küresel ölçekte değerlerimizi ve çalışmalarımızı sürdürmeyi hedefliyoruz.</p>
                             <p>Güçlü değerlerimiz kurum kültürümüzü şekillendirir, stratejimizi destekler ve misyonumuz ile vizyonumuzun hayata geçirilmesini sağlar. Güvenilirlik, etik ilkelere bağlılık, yenilikçilik, insan odaklılık ve sürdürülebilirlik temel değerlerimizdir.</p>
@@ -196,116 +196,9 @@
             </div>
         </div>
     </div><!-- footer -->
-    <!-- Modal -->
-    <div class="modal fade" id="kvkkModal" tabindex="-1" aria-labelledby="kvkkModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="kvkkModalLabel">KVKK ve Gizlilik Sözleşmesi</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
-                </div>
-            </div>
-        </div>
-    </div><!-- kvkkModal -->
     <script src="assets/plugins/jquery-3.7.1.min.js"></script>
     <script src="assets/plugins/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
-    <script src="assets/plugins/swiper/swiper-bundle.min.js"></script>
     <script src="assets/plugins/aos/aos.js"></script>
-    <script src="assets/plugins/fancybox/fancybox.umd.js"></script>
     <script src="assets/js/global.js"></script>
-    <script>
-        AOS.init({
-            once: true,  // Animasyonlar sadece bir kez tetiklenecek
-            mobile: false, // Mobil cihazlarda AOS'u devre dışı bırakır
-        });
-        
-        var mainSlider = new Swiper(".main-slider .main-swiper", {
-            effect: 'fade',
-            parallax: true,
-            autoplay: {
-                delay: 4000,
-                disableOnInteraction: true,
-            },
-            navigation: {
-                nextEl: ".main-slider .swiper-button-next",
-                prevEl: ".main-slider .swiper-button-prev",
-            },
-        });
-        
-        var operations = new Swiper(".operations .operations-swiper", {
-            slidesPerView: 3,
-            spaceBetween: 20,
-            autoplay: {
-                delay: 4000,
-                disableOnInteraction: true,
-            },
-            navigation: {
-                nextEl: ".operations .swiper-button-next",
-                prevEl: ".operations .swiper-button-prev",
-            },
-            breakpoints: {
-                0: {
-                    slidesPerView: 1,
-                },
-                640: {
-                    slidesPerView: 2,
-                },
-                991: {
-                    slidesPerView: 3,
-                },
-            },
-        });
-        var mainTestimonials = new Swiper(".testimonials .testimonials-swiper", {
-            slidesPerView: 1,
-            autoplay: {
-                delay: 4000,
-                disableOnInteraction: true,
-            },
-            navigation: {
-                nextEl: ".testimonials .swiper-button-next",
-                prevEl: ".testimonials .swiper-button-prev",
-            },
-        });
-        var mainLogos = new Swiper(".logos-slider .logos-swiper", {
-            slidesPerView: 5,
-            autoplay: {
-                delay: 4000,
-                disableOnInteraction: true,
-            },
-            breakpoints: {
-                0: {
-                    slidesPerView: 1,
-                },
-                640: {
-                    slidesPerView: 2,
-                },
-                991: {
-                    slidesPerView: 3,
-                },
-                1200: {
-                    slidesPerView: 4,
-                },
-                1500: {
-                    slidesPerView: 5,
-                },
-            },
-        });
-
-    </script>
 </body>
 </html>
